# python_copier

./: .bumpversion.cfg  .flake8  LICENSE  README.md  copier.yml  noxfile.py  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: CI.yml  labeler.yml
project/: .bumpversion.cfg.jinja  .flake8  .pre-commit-config.yaml  .tag.toml.jinja  LICENSE.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  tbump.toml.jinja  {% if build_system != 'poetry' %}noxfile.py{% endif %}.jinja  {% if build_system == 'flit' %}noxfile.py{% endif %}.jinja  {% if build_system == 'flit' %}pyproject.toml{% endif %}.jinja  {% if build_system == 'hatch' %}noxfile.py{% endif %}.jinja  {% if build_system == 'hatch' %}pyproject.toml{% endif %}.jinja  {% if build_system == 'poetry' %}noxfile.py{% endif %}.jinja  {% if build_system == 'poetry' %}pyproject.toml{% endif %}.jinja  {% if build_system == 'setuptools' %}noxfile.py{% endif %}.jinja  {% if build_system == 'setuptools' %}pyproject.toml{% endif %}.jinja  {% if build_system == 'setuptools' %}setup.py{% endif %}.jinja
project/.github/ISSUE_TEMPLATE/: bug_report.yml.jinja
project/.github/workflows/: CI.yml.jinja  labeler.yml  release_drafter.yml
project/docs/contributing/: contributing.md.jinja
project/src/{{project_slug}}/: __init__.py.jinja  py.typed.jinja  {{project_slug}}.py.jinja
project/tests/: test_obvious.py.jinja
