[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61",
    "wheel>=0.37.1",
]

[project]
name = "copier_pypackage"
version = "0.1.2"
description = "A modern python package template"
readme = "README.md"
license = { text = "MIT License" }
maintainers = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
authors = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
requires-python = ">=3.8"
dependencies = [
    "copier>=6",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
[project.optional-dependencies]
dev = [
    "black>=22.3",
    "build>=0.7",
    "bump2version>=1.0.1",
    "coverage[toml]>=6.3.2",
    "coverage-badge>=1.1",
    "flake8>=4.0.1",
    "flake8-bugbear>=22.4.25",
    "isort>=5.10.1",
    "mkdocs>=1.3",
    "mkdocs-material>=8.2.11",
    "mypy>=0.950",
    "nox>=2022.1.7",
    "pre-commit>=2.18.1",
    "pytest>=7.1.2",
    "pytest-cookies>=0.6.1",
    "pytest-cov>=3",
]

[project.urls]
homepage = "https://github.com/FollowTheProcess/copier_pypackage"
repository = "https://github.com/FollowTheProcess/copier_pypackage"


[tool.isort]
profile = "black"
